--- a/css/style.css
+++ b/css/style.css
@@ -1331,13 +1331,13 @@ form label {
     /* words */
 }
 
-#fh5co-testimonial,
+#testimonials,
 #fh5co-services,
-#fh5co-started,
+#insta-callout,
 #fh5co-footer,
 #fh5co-event,
-#fh5co-couple-story,
-#fh5co-couple,
+#welcome-story,
+#welcome,
 #fh5co-gallery,
 .fh5co-section {
     padding: 5em 0;
@@ -1354,13 +1354,13 @@ form label {
 }
 
 @media screen and (max-width: 767px) {
-    #fh5co-testimonial,
+    #testimonials,
     #fh5co-services,
-    #fh5co-started,
+    #insta-callout,
     #fh5co-footer,
     #fh5co-event,
-    #fh5co-couple-story,
-    #fh5co-couple,
+    #welcome-story,
+    #welcome,
     #fh5co-gallery,
     .fh5co-section {
         padding: 3em 0;
@@ -1569,7 +1569,7 @@ form label {
     margin-bottom: 5em;
 }
 
-#fh5co-started .fh5co-heading.insta-callout,
+#insta-callout .fh5co-heading.insta-callout,
 .fh5co-heading.insta-callout {
     margin-bottom: 5vw;
     margin-top: 5vw;
@@ -1617,24 +1617,24 @@ form label {
     color: rgba(0, 0, 0, 0.4);
 }
 
-#fh5co-testimonial .wrap-testimony {
+#testimonials .wrap-testimony {
     position: relative;
 }
-#fh5co-testimonial .wrap-testimony .testimony-slide {
+#testimonials .wrap-testimony .testimony-slide {
     text-align: center;
 }
-#fh5co-testimonial .wrap-testimony .testimony-slide span {
+#testimonials .wrap-testimony .testimony-slide span {
     font-size: 12px;
     text-transform: uppercase;
     letter-spacing: 2px;
     font-weight: 700;
     display: block;
 }
-#fh5co-testimonial .wrap-testimony .testimony-slide span a.twitter {
+#testimonials .wrap-testimony .testimony-slide span a.twitter {
     color: var(--accent_color);
     font-weight: 300;
 }
-#fh5co-testimonial .wrap-testimony .testimony-slide figure {
+#testimonials .wrap-testimony .testimony-slide figure {
     margin-bottom: 10px;
     display: -moz-inline-stack;
     display: inline-block;
@@ -1650,7 +1650,7 @@ form label {
     overflow: hidden;
 }
 
-#fh5co-testimonial .wrap-testimony .testimony-slide figure img {
+#testimonials .wrap-testimony .testimony-slide figure img {
     width: 200px;
     height: 200px;
     -webkit-border-radius: 50%;
@@ -1658,7 +1658,7 @@ form label {
     -ms-border-radius: 50%;
     border-radius: 50%;
 }
-#fh5co-testimonial .wrap-testimony .testimony-slide blockquote {
+#testimonials .wrap-testimony .testimony-slide blockquote {
     border: none;
     margin: 30px auto;
     width: 50%;
@@ -1669,32 +1669,32 @@ form label {
     border-radius: 4px;
 }
 @media screen and (max-width: 992px) {
-    #fh5co-testimonial .wrap-testimony .testimony-slide blockquote {
+    #testimonials .wrap-testimony .testimony-slide blockquote {
         width: 100%;
     }
 }
-#fh5co-testimonial .wrap-testimony .testimony-slide blockquote p {
+#testimonials .wrap-testimony .testimony-slide blockquote p {
     font-style: italic;
     /* color: #8f989f; */
     font-size: 20px;
     line-height: 1.6em;
 }
-#fh5co-testimonial .wrap-testimony .testimony-slide.active {
+#testimonials .wrap-testimony .testimony-slide.active {
     display: block;
 }
-#fh5co-testimonial .wrap-testimony .arrow-thumb {
+#testimonials .wrap-testimony .arrow-thumb {
     position: absolute;
     top: 40%;
     display: block;
     width: 100%;
 }
-#fh5co-testimonial .wrap-testimony .arrow-thumb a {
+#testimonials .wrap-testimony .arrow-thumb a {
     font-size: 32px;
     color: #dadada;
 }
-#fh5co-testimonial .wrap-testimony .arrow-thumb a:hover,
-#fh5co-testimonial .wrap-testimony .arrow-thumb a:focus,
-#fh5co-testimonial .wrap-testimony .arrow-thumb a:active {
+#testimonials .wrap-testimony .arrow-thumb a:hover,
+#testimonials .wrap-testimony .arrow-thumb a:focus,
+#testimonials .wrap-testimony .arrow-thumb a:active {
     text-decoration: none;
 }
 
@@ -1754,10 +1754,10 @@ form label {
     margin-bottom: 10px;
 }
 
-#fh5co-started {
+#insta-callout {
     position: relative;
 }
-#fh5co-started .overlay {
+#insta-callout .overlay {
     position: absolute;
     top: 0;
     left: 0;
@@ -1765,31 +1765,31 @@ form label {
     bottom: 0;
     background: rgba(0, 0, 0, 0.4);
 }
-#fh5co-started .fh5co-heading h2,
-#fh5co-started .fh5co-heading h3 {
+#insta-callout .fh5co-heading h2,
+#insta-callout .fh5co-heading h3 {
     color: #fff;
     text-transform: uppercase;
     font-size: min(35px, 5vw);
 }
-#fh5co-started .fh5co-heading h4,
-#fh5co-started .fh5co-heading h4 > a {
+#insta-callout .fh5co-heading h4,
+#insta-callout .fh5co-heading h4 > a {
     color: #fff;
     font-family: "Fanwood Text";
     font-style: italic;
     margin: 0;
     font-size: min(25px, 3.7vw);
 }
-#fh5co-started .fh5co-heading h4 > a:hover {
+#insta-callout .fh5co-heading h4 > a:hover {
     padding-bottom: 0px;
     border-bottom-width: 1px;
     border-bottom-style: solid;
     border-bottom-color: rgba(255, 255, 255, 0.9);
 }
 
-#fh5co-started .fh5co-heading p {
+#insta-callout .fh5co-heading p {
     color: rgba(255, 255, 255, 0.8);
 }
-#fh5co-started .form-control {
+#insta-callout .form-control {
     background: rgba(255, 255, 255, 0.2);
     border: none !important;
     color: #fff;
@@ -1799,24 +1799,24 @@ form label {
     -o-transition: 0.5s;
     transition: 0.5s;
 }
-#fh5co-started .form-control::-webkit-input-placeholder {
+#insta-callout .form-control::-webkit-input-placeholder {
     color: #fff;
 }
-#fh5co-started .form-control:-moz-placeholder {
+#insta-callout .form-control:-moz-placeholder {
     /* Firefox 18- */
     color: #fff;
 }
-#fh5co-started .form-control::-moz-placeholder {
+#insta-callout .form-control::-moz-placeholder {
     /* Firefox 19+ */
     color: #fff;
 }
-#fh5co-started .form-control:-ms-input-placeholder {
+#insta-callout .form-control:-ms-input-placeholder {
     color: #fff;
 }
-#fh5co-started .form-control:focus {
+#insta-callout .form-control:focus {
     background: rgba(255, 255, 255, 0.3);
 }
-#fh5co-started .btn {
+#insta-callout .btn {
     height: 54px;
     border: none !important;
     background: var(--accent_color);
@@ -1827,10 +1827,10 @@ form label {
     padding-left: 50px;
     padding-right: 50px;
 }
-#fh5co-started .form-inline .form-group {
+#insta-callout .form-inline .form-group {
     width: 100% !important;
 }
-#fh5co-started .form-inline .form-group .form-control {
+#insta-callout .form-inline .form-group .form-control {
     width: 100%;
 }
 
@@ -1844,10 +1844,10 @@ form label {
     }
 }
 
-#fh5co-started .fh5co-heading {
+#insta-callout .fh5co-heading {
     margin-bottom: 30px;
 }
-#fh5co-started .fh5co-heading h2 {
+#insta-callout .fh5co-heading h2 {
     margin-bottom: 0;
 }
 
