--- a/css/style.css
+++ b/css/style.css
@@ -132,6 +132,10 @@ body {
     /* text-align: center; */
 }
 
+.icon-play::before {
+    padding-left: 5px;
+}
+
 .video-player {
     background-image: url("/img/KevinandKatyThumbnailVimeo.jpg");
     background-repeat: no-repeat;
