--- a/css/style.css
+++ b/css/style.css
@@ -104,6 +104,10 @@ body {
     align-content: center;
     justify-content: center;
     align-items: center;
+    -webkit-user-select: none; /* Safari */        
+    -moz-user-select: none; /* Firefox */
+    -ms-user-select: none; /* IE10+/Edge */
+    user-select: none; /* Standard */
 }
 
 .video-text,
