--- a/css/style.css
+++ b/css/style.css
@@ -1397,6 +1397,30 @@ form label {
     padding-top: 2em;
 }
 
+.fh5co-heading {
+    margin-bottom: 5em;
+}
+
+@media screen and (max-width: 767px) {
+    .fh5co-heading {
+        margin-bottom: 1em;
+    }
+}
+
+#insta-callout .fh5co-heading.insta-callout,
+.fh5co-heading.insta-callout {
+    margin-bottom: 5vw;
+    margin-top: 5vw;
+}
+
+.fh5co-heading.fh5co-heading-sm {
+    margin-bottom: 2em;
+}
+
+.fh5co-heading.fh5co-heading-none {
+    margin-bottom: 0;
+}
+
 .fh5co-section-gray {
     background: rgba(0, 0, 0, 0.04);
 }
@@ -1579,30 +1603,6 @@ form label {
     text-transform: uppercase;
     font-size: 18px;
     color: #5d5d5d;
-}
-
-.fh5co-heading {
-    margin-bottom: 5em;
-}
-
-@media screen and (max-width: 992px) {
-    .fh5co-heading {
-        margin-bottom: 1em;
-    }
-}
-
-#insta-callout .fh5co-heading.insta-callout,
-.fh5co-heading.insta-callout {
-    margin-bottom: 5vw;
-    margin-top: 5vw;
-}
-
-.fh5co-heading.fh5co-heading-sm {
-    margin-bottom: 2em;
-}
-
-.fh5co-heading.fh5co-heading-none {
-    margin-bottom: 0;
 }
 
 .fh5co-heading h2 {
@@ -2693,8 +2693,24 @@ form label {
     min-height: 1px;
     column-gap: 14px;
     column-count: 1;
-    padding-left: 7px;
-    padding-right: 7px;
+    /* padding-left: 7px; */
+    /* padding-right: 7px; */
+}
+
+.wrapper-gallery {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    /* gap: 14px; */
+    /* grid-auto-columns: 30%; */
+    /* grid-template-rows: 700px 500px; */
+}
+
+.wrapper-gallery div.portfolio-img-container {
+    width: calc(33.3% - 9.3333px);
+    /* margin-right: 7px; */
+    /* margin-left: 7px; */
 }
 
 @media (max-width: 991px) {
@@ -2703,11 +2719,30 @@ form label {
     }
 }
 
+@media (min-width: 501px) and (max-width: 766px) {
+    .wrapper-gallery {
+        margin: 0 14px 14px 14px;
+    }
+    .wrapper-gallery div.portfolio-img-container {
+        width: calc(33.3% - 18.7);
+    }
+    .wrapper-col {
+        margin: 0 14px;
+    }
+}
+
 @media (max-width: 500px) {
     .wrapper-3-col {
         column-count: 1;
         display: flex;
         flex-direction: column;
+    }
+    .wrapper-gallery div.portfolio-img-container {
+        width: 100%;
+        margin: 0 14px 14px 14px;
+    }
+    .wrapper-col {
+        margin: 0 14px;
     }
 }
 
